# pto-isa

docs/: PTOISA.md  (+1 more)
tests/npu/a2a3/src/st/testcase/syncall/: CMakeLists.txt  gen_data.py  main.cpp  make_mix_register_elf.py  syncall_aic_hard_kernel.cpp  syncall_aic_kernel.cpp  syncall_kernel.cpp  syncall_mix_1_1_kernel.cpp  syncall_mix_1_2_kernel.cpp  syncall_mix_common.hpp  syncall_soft_kernel.cpp
tests/npu/a5/comm/st/testcase/: CMakeLists.txt  ccu_test_main.hpp  common.hpp  hccl_context.h
tests/npu/a5/comm/st/testcase/tbroadcast_ccu/: CMakeLists.txt  main.cc  tbroadcast_ccu_kernel.cpp
tests/npu/a5/comm/st/testcase/tgather_ccu/: CMakeLists.txt  main.cc  tgather_ccu_kernel.cpp
tests/npu/a5/comm/st/testcase/tget_async/: tget_async_kernel.cpp
tests/npu/a5/comm/st/testcase/tget_async_urma/: tget_async_urma_kernel.cpp
tests/npu/a5/comm/st/testcase/tnotify/: tnotify_kernel.cpp
tests/npu/a5/comm/st/testcase/tput_async/: tput_async_kernel.cpp
tests/npu/a5/comm/st/testcase/tput_async_urma/: tput_async_urma_kernel.cpp
tests/npu/a5/comm/st/testcase/treduce_ccu/: CMakeLists.txt  main.cc  treduce_ccu_kernel.cpp
tests/npu/a5/comm/st/testcase/tscatter_ccu/: CMakeLists.txt  gen_data.py  main.cc  tscatter_ccu_kernel.cpp
tests/npu/a5/comm/st/testcase/ttest/: ttest_kernel.cpp
tests/npu/a5/comm/st/testcase/twait/: twait_kernel.cpp
tests/npu/kirin9030/src/st/testcase/: CMakeLists.txt
tests/npu/kirin9030/src/st/testcase/tabs/: tabs_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tand/: main.cpp  tand_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tands/: tands_kernel.cpp
tests/npu/kirin9030/src/st/testcase/taxpy/: main.cpp
tests/npu/kirin9030/src/st/testcase/tcmp/: tcmp_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tcmps/: tcmps_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tcolargmax/: gen_data.py  main.cpp  tcolargmax_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tcolargmin/: tcolargmin_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tcolexpandadd/: tcolexpandadd_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tcolexpanddiv/: tcolexpanddiv_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tcolexpandexpdif/: tcolexpandexpdif_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tcolexpandmax/: tcolexpandmax_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tcolexpandmin/: tcolexpandmin_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tcolexpandmul/: tcolexpandmul_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tcolexpandsub/: tcolexpandsub_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tcolprod/: tcolprod_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tconcat/: tconcat_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tconcatdstidx/: CMakeLists.txt  gen_data.py  main.cpp  tconcatdstidx_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tconcatidx/: main.cpp  tconcatidx_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tcvt/: tcvt_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tdiv/: tdiv_kernel.cpp
tests/npu/kirin9030/src/st/testcase/texpands/: texpands_kernel.cpp
tests/npu/kirin9030/src/st/testcase/texpands_mat/: texpands_mat_kernel.cpp
tests/npu/kirin9030/src/st/testcase/textract_acc2vec/: textract_acc2vec_kernel.cpp
tests/npu/kirin9030/src/st/testcase/textract_compact/: gen_data.py  main.cpp  textract_compact_kernel.cpp
tests/npu/kirin9030/src/st/testcase/textract_nd_vec/: textract_nd_vec_kernel.cpp
tests/npu/kirin9030/src/st/testcase/textract_vec/: gen_data.py  main.cpp  textract_vec_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tfmod/: gen_data.py  main.cpp  tfmod_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tfmods/: gen_data.py  main.cpp  tfmods_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tgather/: tgather_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tgatherb/: gen_data.py  main.cpp  tgatherb_kernel.cpp
tests/npu/kirin9030/src/st/testcase/thistogram/: thistogram_kernel.cpp
tests/npu/kirin9030/src/st/testcase/timg2col/: gen_data.py  main.cpp  timg2col_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tload/: gen_data.py  main.cpp  tload_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tload_shape2d/: tload_shape2d_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tlog/: tlog_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tlrelu/: tlrelu_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tmatmul/: tmatmul_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tmax/: tmax_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tmaxs/: tmaxs_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tmin/: tmin_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tmins/: tmins_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tmov_ub2l1/: tmov_ub2l1_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tmrgsort/: tmrgsort_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tmul/: tmul_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tneg/: tneg_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tnot/: tnot_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tor/: main.cpp  tor_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tors/: tors_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tpartargmax/: CMakeLists.txt  gen_data.py  main.cpp  tpartargmax_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tpartargmin/: CMakeLists.txt  gen_data.py  main.cpp  tpartargmin_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tpartmax/: gen_data.py  main.cpp  tpartmax_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tpartmin/: gen_data.py  main.cpp  tpartmin_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tpartmul/: tpartmul_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tpow/: gen_data.py  main.cpp  tpow_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tprelu/: gen_data.py  main.cpp  tprelu_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tquant/: gen_data.py  main.cpp  tquant_kernel.cpp
tests/npu/kirin9030/src/st/testcase/trecip/: trecip_kernel.cpp
tests/npu/kirin9030/src/st/testcase/trelu/: trelu_kernel.cpp
tests/npu/kirin9030/src/st/testcase/trem/: main.cpp  trem_kernel.cpp
tests/npu/kirin9030/src/st/testcase/trowargmax/: gen_data.py  main.cpp  trowargmax_kernel.cpp
(+760 files in other folders)
